--- a/objetivos 2024/index.html
+++ b/objetivos 2024/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>objetivos2024</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="conteudo-principal">
         <h1 class="tituloprincipal">Objetivos para 2024</h1>
         <div class="botoes">
             <button class="botao">Ler metade da bíblia</button>
+            <button class="botao">Ir pro quem lê viaja</button>
+            <button class="botao">Tirar uma boa nota no ENEM</button>
+            <button class="botao">Melhorar meu inglês</button>
         </div>
     </section>
 
