--- a/Objetivos-2024-main/Objetivos-2024-main/objetivos 2024/index.html
+++ b/Objetivos-2024-main/Objetivos-2024-main/objetivos 2024/index.html
@@ -11,7 +11,7 @@
     <section class="conteudo-principal">
         <h1 class="tituloprincipal">Objetivos para 2024</h1>
         <div class="botoes">
-            <button class="botao ativo">Ler metade da bíblia</button>
+            <button class="botao">Ler metade da bíblia</button>
             <button class="botao">Ir pro quem lê viaja</button>
             <button class="botao">Tirar uma boa nota no ENEM</button>
             <button class="botao">Melhorar meu inglês</button>
