--- a/objetivos 2024/index.html
+++ b/objetivos 2024/index.html
@@ -10,13 +10,38 @@
 <body>
     <section class="conteudo-principal">
         <h1 class="tituloprincipal">Objetivos para 2024</h1>
+        <div class="conteudo">
         <div class="botoes">
-            <button class="botao">Ler metade da bíblia</button>
+            <button class="botao ativo">Ler metade da bíblia</button>
             <button class="botao">Ir pro quem lê viaja</button>
             <button class="botao">Tirar uma boa nota no ENEM</button>
             <button class="botao">Melhorar meu inglês</button>
         </div>
+        <div class="aba-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ler metade da bíblia</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Ler alguns capítulos por dia depois da meditação normal</h4>
+            </div>
+
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ir pro quem lê viaja</h3>
+                <h4 class="aba-conteudo-titulo-secundario">ler vários livros para não ficar com medo de não ir</h4>
+            </div>
+
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Tirar uma boa nota no ENEM</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Estudar todos os dias, principalmente exatas e redação que é mais difícil</h4>
+            </div>
+
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Melhorar meu inglês</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Estudar o material do curso, e assistir tudo em inglês</h4>
+            </div>    
+        </div>
+        </div>
+
     </section>
+    <script src="main.js"></script>
 
     
 </body>
