--- a/objetivos 2024/index.html
+++ b/objetivos 2024/index.html
@@ -18,7 +18,7 @@
             <button class="botao">Melhorar meu inglês</button>
         </div>
         <div class="aba-textos">
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Ler metade da bíblia</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Ler alguns capítulos por dia depois da meditação normal</h4>
             </div>
