--- a/objetivos 2024/index.html
+++ b/objetivos 2024/index.html
@@ -21,21 +21,25 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Ler metade da bíblia</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Ler alguns capítulos por dia depois da meditação normal</h4>
+                <div class="contador"></div>
             </div>
 
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Ir pro quem lê viaja</h3>
                 <h4 class="aba-conteudo-titulo-secundario">ler vários livros para não ficar com medo de não ir</h4>
+                <div class="contador"></div>
             </div>
 
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Tirar uma boa nota no ENEM</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Estudar todos os dias, principalmente exatas e redação que é mais difícil</h4>
+                <div class="contador"></div>
             </div>
 
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Melhorar meu inglês</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Estudar o material do curso, e assistir tudo em inglês</h4>
+                <div class="contador"></div>
             </div>    
         </div>
         </div>
